--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-big-calendar",
-  "version": "0.17.0",
-  "description": "Calendar! with events",
-  "author": "Jason Quense <monastic.panic@gmail.com>",
-  "repository": "intljusticemission/react-big-calendar",
+  "name": "react-big-calendar-like-google",
+  "version": "0.0.1",
+  "description": "Forked from Jason Quense <monastic.panic@gmail.com> (https://github.com/intljusticemission/react-big-calendar). Changed calendar style! with events",
+  "author": "Onur Şimşek <onur.simsek1994@hotmail.com>",
+  "repository": "onursimsek94/react-big-calendar",
   "license": "MIT",
   "main": "lib/index.js",
   "style": "lib/css/react-big-calendar.css",
@@ -19,7 +19,8 @@
     "react",
     "calendar",
     "events",
-    "full calendar"
+    "full calendar",
+    "google calendar"
   ],
   "scripts": {
     "clean": "rimraf lib",
