--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "less-plugin-autoprefix": "^1.5.1",
     "markdown-jsx-loader": "^2.0.1",
     "marked": "^0.3.5",
-    "moment": "^2.17.1",
+    "moment": "^2.19.3",
     "mt-changelog": "^0.6.1",
     "react": "^15.3.0",
     "react-bootstrap": "^0.28.0",
@@ -83,6 +83,7 @@
     "dom-helpers": "^2.3.0 || ^3.0.0",
     "invariant": "^2.1.0",
     "lodash": "^4.17.4",
+    "material-ui": "^0.19.4",
     "prop-types": "^15.5.8",
     "react-overlays": "^0.7.0",
     "react-prop-types": "^0.4.0",
